# eyetest

./: .gitignore  README.md  main.py  pyproject.toml
configs/: calibration.default.yaml  default.yaml
docs/superpowers/specs/: 2026-03-20-eyetest-integration-design.md
src/eyetest/: cli.py  config.py
src/eyetest/adapters/: __init__.py  ellipse_adapter.py
src/eyetest/gaze/: __init__.py  calibration.py  estimator.py  geometry.py
src/eyetest/inputs/: __init__.py  camera.py  video.py
src/eyetest/models/: __init__.py  types.py
src/eyetest/outputs/: __init__.py  overlay.py  writers.py
src/eyetest/pipelines/: __init__.py  batch_pipeline.py  realtime_pipeline.py
src/eyetest/segmentation/: __init__.py  ellseg_compat_loss.py  ellseg_compat_utils.py  ellseg_helpers.py  ellseg_model.py  ellseg_pipeline.py  ellseg_preprocess.py
tests/: test_batch_pipeline.py  test_cli_entry.py  test_config.py  test_ellipse_adapter.py  test_ellseg_preprocess.py  test_eye_pair_extractor.py  test_gaze_estimator.py  test_output_writers.py
